# Brainmarks

./: README.md  pyproject.toml
datasets/AABC/: README.md
datasets/AABC/scripts/: make_aabc_metadata.py  make_aabc_pretrain.py  make_aabc_targets.py
datasets/ADNI/: README.md
datasets/ADNI/scripts/: adni_curation.py  make_adni_eval.py  make_adni_targets.py  run_fmriprep.sh  run_parallel_fmriprep.sh
datasets/Cephalonauts_One/: README.md
datasets/Cephalonauts_One/scripts/: make_eval.py
datasets/OASIS/: README.md
datasets/OASIS/scripts/: identify_runs.py  make_oasis_eval.py  make_oasis_splits.py
src/brainmarks/: classifiers.py  compare_logistic.py  compare_retrieval.py  main_logistic.py  main_probe.py  main_retrieval.py  nisc.py  readers.py  utils.py
src/brainmarks/config/: compare_logistic.yaml  compare_retrieval.yaml  default_finetune.yaml  default_logistic.yaml  default_probe.yaml  default_retrieval.yaml
src/brainmarks/datasets/: aabc.py  abide.py  adhd200.py  adni.py  base.py  cephalonauts_one.py  hcpya.py  nsd.py  oasis.py  ppmi.py
src/brainmarks/models/: cortex_mae.py  identity.py
