[build-system]
requires = ["setuptools>=77", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "brainmarks"
dynamic = ["version"]
description = "Brainmarks: fMRI foundation model evaluation suite"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "cloudpathlib[s3]",
    "datasets",
    "einops",
    "filelock",
    "fsspec",
    "gdown",
    "huggingface_hub",
    "matplotlib",
    "nibabel",
    "nilearn",
    "numpy",
    "omegaconf",
    "pandas",
    "peft",
    "pycortex",
    "s3fs",
    "scikit-learn",
    "scipy",
    "setuptools<67",
    "tabulate",
    "templateflow",
    "torch",
    "tqdm",
    "wandb",
]

[project.urls]
Homepage = "https://github.com/MedARC-AI/Brainmarks"
Issues = "https://github.com/MedARC-AI/Brainmarks/issues"

[dependency-groups]

dev = [
    "ipython",
    "jupyter",
    "nsdcode",
    "pre-commit",
    "pytest",
    "seaborn",
    "webdataset",
]

[project.optional-dependencies]

brain-jepa = [
    "brain-jepa",
]

swift = [
    "swiftfmri",
]

brainlm = [
    "brainlm",
]

brainharmonix = [
    "brainharmonix",
]

brain-semantoks = [
    "brain-semantoks",
]

neurostorm = [
    "neurostorm",
    "mamba-ssm==2.2.5",
    "wheel",
]

cortex-mae = [
    "cortex-mae",
]

[tool.setuptools_scm]
version_file = "src/brainmarks/version.py"

[tool.uv.sources]
nsdcode = { git = "https://github.com/cvnlab/nsdcode.git", rev = "bfd36a503cc90a3eb3ebfd69b269403f7e186924" }
brain-jepa = { git = "https://github.com/MedARC-AI/Brain-JEPA.git", rev = "c43f8a647b948000ec1a92c4ea6f5efb4efc27f1" }
swiftfmri = { git = "https://github.com/MedARC-AI/SwiFT.git", rev = "324b003061e484ebd1a247967b520019fda911fc" }
brainlm = { git = "https://github.com/MedARC-AI/BrainLM.git", rev = "e287e0fa0f2dda61b448614d92e9041cb38fa128" }
brainharmonix = { git = "https://github.com/MedARC-AI/Brain-Harmony.git", rev = "5398f8f5540222973cf82d13ac1eb4c4b38af636" }
brain-semantoks = { git = "https://github.com/SamGijsen/Brain-Semantoks.git", rev = "4b48b5942b2f7df60fe8aaf3f328733fad647b54" }
neurostorm = { git = "https://github.com/MedARC-AI/NeuroSTORM.git", rev = "7fa3b96c8021735f1d84a81d0367b2568a2dc6e4"  }

[tool.uv]
no-build-isolation-package = ["mamba-ssm"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
